--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <!-- Navbar links -->
           <ul class="nav navbar-nav">
             <li ng-class="{ active: $state.is('app.home') }">
-              <a ui-sref="app.home">Home</a>
+              <a ui-sref="app.home">首页</a>
             </li>
             <li ng-class="{ active: $state.is('app.admin') }">
               <a ui-sref="app.admin">Admin-Only page</a>
