--- a/src/register/register.tpl.html
+++ b/src/register/register.tpl.html
@@ -1,9 +1,9 @@
 <form class="form-signin" name="registerForm" role="registration" ng-submit="submit(registerForm)">
   <div class="alert alert-warning">
-    <p class="text-center"><strong>Please NOTE</strong></p>
-    <p class="text-center">All the data here is fake, it gets stored in your localStorage, it will <strong>NEVER</strong> leave your browser.</p>
+    <p class="text-center"><strong>请填写</strong></p>
+    <p class="text-center">这里所有的数据都会提交到你的本地仓库 <strong>不要</strong> 离开你的浏览器</p>
   </div>
-  <h2 class="form-signin-heading"><i class="fa fa-user"></i> New User</h2>
+  <h2 class="form-signin-heading"><i class="fa fa-user"></i> 新用户</h2>
   <!--div class="form-group">
     <label for="username" class="col-lg-2 control-label">Email</label>
     <div class="col-lg-10">
@@ -11,22 +11,22 @@
     </div>
   </div-->
   <div class="form-input username">
-    <input type="text" class="form-control" placeholder="Username" name="username" ng-model="registerObj.username" autofocus="true"
+    <input type="text" class="form-control" placeholder="用户名" name="username" ng-model="registerObj.username" autofocus="true"
       ng-minlength="4" ng-maxlength="16" ng-required="true" remote-validated="used">
     <div class="errors" ng-class="{ active: registerForm.username.$invalid && registerForm.username.$dirty }">
       <div class="error ng-hide" ng-show="registerForm.username.$error.minlength">
-        <p>Username is too short!</p>
+        <p>用户名太短</p>
       </div>
       <div class="error ng-hide" ng-show="registerForm.username.$error.maxlength">
-        <p>Max username length is 16, please shorten it.</p>
+        <p>用户名最长为16位，请不要长于它</p>
       </div>
       <div class="error ng-hide" ng-show="registerForm.username.$error.used">
-        <p>Username is already taken.</p>
+        <p>用户名已存在！</p>
       </div>
     </div>
   </div>
   <div class="form-input name">
-    <input type="text" class="form-control" placeholder="Real Name" name="name" ng-model="registerObj.name" ng-minlength="4" ng-maxlength="32" ng-required="true">
+    <input type="text" class="form-control" placeholder="真实姓名" name="name" ng-model="registerObj.name" ng-minlength="4" ng-maxlength="32" ng-required="true">
     <div class="errors" ng-class="{ active: registerForm.name.$invalid && registerForm.name.$dirty }">
       <div class="error ng-hide" ng-show="registerForm.name.$error.minlength">
         <p>Provided name is too short!</p>
@@ -37,8 +37,8 @@
     </div>
   </div>
   <div class="form-input password">
-    <input type="password" class="form-control password" placeholder="Password" name="password" ng-model="registerObj.password" ng-minlength="4" ng-maxlength="16" ng-required="true" password-match="registerObj.password2">
-    <input type="password" class="form-control password2" placeholder="Repeat Password" name="password2" ng-model="registerObj.password2">
+    <input type="password" class="form-control password" placeholder="密码" name="password" ng-model="registerObj.password" ng-minlength="4" ng-maxlength="16" ng-required="true" password-match="registerObj.password2">
+    <input type="password" class="form-control password2" placeholder="重写密码" name="password2" ng-model="registerObj.password2">
     <div class="errors" ng-class="{ active: registerForm.password.$invalid && registerForm.password.$dirty }">
       <div class="error ng-hide" ng-show="registerForm.password.$error.match">
         <p>Passwords do not match.</p>
@@ -64,14 +64,14 @@
   </div>
   <div class="form-input role">
     <select class="form-control" name="role" ng-model="registerObj.role">
-      <option value="user" selected>User</option>
-      <option value="admin">Administrator</option>
+      <option value="user" selected>用户</option>
+      <option value="admin">管理员</option>
     </select>
   </div>
   <button class="btn btn-lg btn-block" type="submit"
     ng-class="{ 'btn-primary': registerForm.$valid && registerForm.$dirty, 'btn-success': redirect }"
     ng-disabled="registerForm.$invalid || registerForm.$pristine || xhr || redirect">
-    <span ng-hide="redirect">Register <i class="fa fa-repeat fa-spin" ng-show="xhr"></i></span>
-    <span ng-show="redirect">Redirecting... <i class="fa fa-repeat fa-spin"></i></span>
+    <span ng-hide="redirect">注册 <i class="fa fa-repeat fa-spin" ng-show="xhr"></i></span>
+    <span ng-show="redirect">重写... <i class="fa fa-repeat fa-spin"></i></span>
   </button>
 </form>
