--- a/src/home/home.tpl.html
+++ b/src/home/home.tpl.html
@@ -1,5 +1,5 @@
 <div class="jumbotron">
-  <h1>这是<span color:red>WVMS</span>首页！</h1>
+  <h1>这是WVMS首页！</h1>
   <p>每个人都可以通过这个页面，看到自己的注册信息</p>
   <div ng-repeat="user in users">
     <h2>{{ user.name }}</h2>
