--- a/src/home/home.tpl.html
+++ b/src/home/home.tpl.html
@@ -1,5 +1,5 @@
 <div class="jumbotron">
-  <h1>这是WVMS首页！</h1>
+  <h1>这是VWMS首页！</h1>
   <p>每个人都可以通过这个页面，看到自己的注册信息</p>
   <div ng-repeat="user in users">
     <h2>{{ user.name }}</h2>
@@ -17,5 +17,5 @@
   </code>
 </pre>
 
-<h2>欢迎登录WVMS获得更多的信息</h2>
-<p>欢迎您查看WVMS官方首页，了解更多关于公司的信息</p>
+<h2>欢迎登录VWMS获得更多的信息</h2>
+<p>欢迎您查看VWMS官方首页，了解更多关于公司的信息</p>
